
This change removes a usage restriction enforced by the LGPL3: you no longer need to release any modifications to the core Propel source code under a LGPL compatible license. 

Of course, you still have the right to use, copy, modify, merge, publish, distribute, sublicense, and/or sell Propel. In other terms, you can do whatever you want with the Propel code, without worrying about the license, as long as you leave the LICENSE file within.

== Miscellaneous ==

 * You can now prefix all the table names of a database schema by setting the `tablePrefix` attribute of the `<database>` tag.
 * The `addIncludes` build property introduced in Propel 1.4 is now set to `false` by default. That means that the runtime autoloading takes care of loading all classes at runtime, including generated Base classes.
 * XSL transformation of your schemas is no longer enabled by default. Turn the `propel.schema.transform` setting to `true` in your `build.properties` to enable it again. This change removes the requirement on the libxslt extention for Propel.
 * `ModelObject::addSelectColumns()` now accepts an additional parameter to allow the use of table aliases
 * Added `ModelObject::clear()` to reinitialize a model object
 * Added `ModelObject::isPrimaryKeyNull()` method to check of an object was hydrated with no values (in case of a left join)
 * Added `Criteria::addSelectModifier($modifier)` to add more than one select modifier (e.g. 'SQL_CALC_FOUND_ROWS', 'HIGH_PRIORITY', etc.)
 * Added `PeerClass::addGetPrimaryKeyFromRow()` to retrieve the Primary key from a result row
 * Added a new set of constants in the generated Peer class to list column names without the table name (this is `BasePeer::TYPE_RAW_COLNAME`)
 * Removed references to Creole in the code (Propel uses PDO instead of Creole since version 1.3)