@@ -28,7 +28,7 @@ propel.runOnlyOnSchemaChange = false
 # Default behavior settings
 #
 propel.targetPlatform = php5
-propel.packageObjectModel = false
+propel.packageObjectModel = true
 propel.useDateTimeClass = true
 propel.dateTimeClass = DateTime
 
