@@ -792,6 +792,7 @@ Of course, you still have the right to use, copy, modify, merge, publish, distri
 == Miscellaneous ==
 
  * You can now prefix all the table names of a database schema by setting the `tablePrefix` attribute of the `<database>` tag.
+ * It is now possible by default to split a schema into multiple schema files, giving each schema a distinct `package` attribute to distribute model files across multiple directories. Foreign keys across schemas work, too.
  * The `addIncludes` build property introduced in Propel 1.4 is now set to `false` by default. That means that the runtime autoloading takes care of loading all classes at runtime, including generated Base classes.
  * XSL transformation of your schemas is no longer enabled by default. Turn the `propel.schema.transform` setting to `true` in your `build.properties` to enable it again. This change removes the requirement on the libxslt extention for Propel.
  * `ModelObject::addSelectColumns()` now accepts an additional parameter to allow the use of table aliases
